fixing the position of the hero on mobile

--- a/app/components/dashboard/backgroundSymbols.module.css
+++ b/app/components/dashboard/backgroundSymbols.module.css
@@ -7,6 +7,8 @@
     height: 100%;
     left: 0;
     top: 0;
+    overflow-x: hidden;
+    opacity: .4;
 }
 .bgc p {
     font-size: clamp(7rem, 7vw, 10rem);
