--- a/app/components/dashboard/heroSection.module.css
+++ b/app/components/dashboard/heroSection.module.css
@@ -45,7 +45,20 @@
     display: flex;
     position: absolute;
     z-index: 4;
-    bottom: 20px;
+    bottom: 0px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 99vw;
+    height: 600px;
+    justify-content: center;
+    align-items: center;
+    translate: -7.5% 0px;
+    overflow: hidden;
+}
+.hero_img img {
+    object-fit: cover;
+    translate: 20px 0px;
 }
 @media (min-width: 900px) {
     .hero_section_container {
