--- a/app/globals.css
+++ b/app/globals.css
@@ -23,10 +23,10 @@ html {
     color: var(--font-color);
     justify-content: center;
     overflow-x: hidden;
+    display: flex;
+    width: 100vw; /* Ensure width matches viewport */
 }
-html,
 body {
-    max-width: 100vw;
     color-scheme: dark;
     display: flex;
     background-color: var(--main-background-color);
